alignment fix for join now block

--- a/showcase-wp/sass/pages/_home.scss
+++ b/showcase-wp/sass/pages/_home.scss
@@ -83,6 +83,11 @@
     }
     a {
       color: black;
+      display: flex;
+      height: 100%;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
     }
     @include  media-xs{
       width: 27.5%;
